# ninja

./: .gitattributes  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml
controller/: Cargo.toml
controller/examples/: strategy.json
controller/src/: cli.rs  custom.rs  main.rs  packet.rs
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/src/: config.rs  main.rs  packet.rs  strategy.rs
firmware/src/actuators/: drivetrain.rs  extension.rs  mod.rs  stepper.rs
firmware/src/profiles/: mod.rs  power.rs  trapezoid.rs
firmware/src/sensors/: mod.rs  proximity.rs  ultrasonic.rs
firmware/src/tasks/: actuator.rs  logger.rs  mod.rs  receiver.rs
micropython/: config.py  drivetrain.py  extension.py  gripper.py  main.py  packet.py  proba.py  profiles.py  secrets.py  servo.py  stepper.py
scripts/: controller.py
src/: conf.rs  config.rs  interrupts.rs  main.rs  packet.rs
src/actuators/: drivetrain.rs  extension.rs  gripper.rs  mod.rs  servo.rs  stepper.rs
src/profiles/: mod.rs  scurve.rs
src/tasks/: actuator.rs  cyw43.rs  logger.rs  mod.rs  net.rs  receiver.rs
src/wrappers/: cyw43.rs  mod.rs  wifi.rs
