[package]
name = "pico2-quick"
version = "0.2.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.9", features = [
  "arch-cortex-m",
  "executor-thread",
] }
panic-halt = { version = "1.0", features = [] }
embassy-time = { version = "0.5.0" }
embassy-rp = { version = "0.9.0", features = [
  "time-driver",
  "critical-section-impl",
  "rp235xa",
  "binary-info",
] }

cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.5"

defmt = "1.0.1"
defmt-rtt = "1.0"
