[package]
name = "ninja"
description = ""
version = "0.2.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.9.1", features = [
  "arch-cortex-m",
  "executor-thread",
] }
embassy-time = "0.5.0"
embassy-rp = { version = "0.9.0", features = [
  "time-driver",
  "critical-section-impl",
  "rp235xa",
  "binary-info",
] }
embassy-usb-logger = "0.5.1"

panic-halt = "1.0"

cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
cyw43 = "0.6.0"
cyw43-pio = "0.9.0"

log = "0.4.29"
static_cell = "2.1.1"