[package]
name = "ninja"
description = ""
version = "0.2.0"
edition = "2024"

[dependencies]
embassy-futures = "0.1.2"
embassy-time = "0.5.0"
embassy-usb-logger = "0.5.1"
embassy-net = { version = "0.8.0", features = ["dhcpv4", "proto-ipv4", "tcp"] }
embedded-io-async = "0.7.0"
embassy-sync = "0.7.2"
embassy-executor = { version = "0.9.1", features = [
  "arch-cortex-m",
  "executor-thread",
] }
embassy-rp = { version = "0.9.0", features = [
  "time-driver",
  "critical-section-impl",
  "rp235xa",
  "binary-info",
] }

cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
cyw43 = "0.6.0"
cyw43-pio = "0.9.0"

panic-halt = "1.0"
log = "0.4.29"
static_cell = "2.1.1"
postcard = "1.1.3"
serde = { version = "1.0.228", default-features = false }
