[package]
name = "controller"
version = "0.1.0"
edition = "2024"

[dependencies]
postcard = { version = "1.1.3", features = ["alloc"] }
heapless = { version = "0.9.2", features = ["serde"] }
serde = { version = "1.0.228", default-features = false }
clap = { version = "4.6.0", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
